Agrego APP loader

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- PrimeReact style dependencies -->
-    <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/themes/nova-light/theme.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/themes/nova-light/theme.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeicons@2.0.0/primeicons.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeflex@1.0.0/primeflex.css" />
-    <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/primereact.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/primereact.min.css" /> -->
 
 
 
@@ -25,17 +25,12 @@
 
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
-        <div id="app"></div>
+        <div id="app">
+        </div>
     </div>
     {% load static %}
     <script src="{% static "frontend/main.js" %}"></script>
 
-    <!-- jQuery 
-    <script src="../../static/frontend/plugins/jquery/jquery.min.js"></script>
-    
-    <script src="../../static/frontend/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    
-    <script src="../../static/frontend/dist/js/adminlte.js"></script> -->
 </body>
 
 </html>
