Agrego comprobantes y actualizo menu

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -14,6 +14,8 @@
 
 
     <link rel="stylesheet" href="../../static/frontend/plugins/fontawesome-free/css/all.min.css">
+
+    <link rel="shortcut icon" href="../../static/frontend/favicon.ico">
     <!--
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="../../static/frontend/dist/css/adminlte.min.css">
