Optimizo con CDNs y agrego Comprobantes y Puntos de Venta

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- PrimeReact style dependencies -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/themes/nova-light/theme.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/themes/nova-light/theme.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeicons@2.0.0/primeicons.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeflex@1.0.0/primeflex.css" />
-    <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/primereact.min.css" /> -->
+    <link rel="stylesheet" href="https://unpkg.com/primereact@4.2.0/resources/primereact.min.css" />
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-
-    <link rel="stylesheet" href="../../static/frontend/plugins/fontawesome-free/css/all.min.css">
+    <!-- <link rel="stylesheet" href="../../static/frontend/plugins/fontawesome-free/css/all.min.css"> -->
+    <script src="https://kit.fontawesome.com/8359cb4f89.js" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" href="../../static/frontend/favicon.ico">
     <!--
