--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -2,8 +2,10 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- PrimeReact style dependencies -->
     <link rel="stylesheet" href="https://unpkg.com/primereact@3.4.0/resources/themes/nova-light/theme.css" />
@@ -13,6 +15,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css" /> -->
 
     <!-- <link rel="stylesheet" href="../../static/frontend/plugins/fontawesome-free/css/all.min.css"> -->
     <script src="https://kit.fontawesome.com/8359cb4f89.js" crossorigin="anonymous"></script>
@@ -34,7 +38,7 @@
     </div>
     {% load static %}
     <script src="{% static "frontend/main.js" %}"></script>
-
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script> -->
 
 </body>
 
